Update UTC code and output timelines to CSV

--- a/ipynb_notebooks/create_timelines_dataset.ipynb
+++ b/ipynb_notebooks/create_timelines_dataset.ipynb
@@ -10,7 +10,12 @@
    "source": [
     "import json\n",
     "import pandas as pd\n",
-    "from datetime import datetime"
+    "from datetime import datetime\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
+    "sys.path\n",
+    "from create_timelines_dataset import create_twitter_timeline_DataFrame, concatenate_all_twitter_timelines\n",
+    "from time_functions import creutc_offset_convert"
    ]
   },
   {
@@ -181,8 +186,8 @@
     "                                    #'tweet_user_profile_banner_url' : tweet_user_profile_banner_url, \n",
     "                                    'tweet_user_contributors_enabled' : tweet_user_contributors_enabled, \n",
     "                                    'tweet_user_lang' : tweet_user_lang,\n",
-    "                                    #'tweet_created_at_datetime' : tweet_created_at_datetime,\n",
-    "                                    #'tweet_user_created_at_datetime' : tweet_user_created_at_datetime\n",
+    "                                    'tweet_created_at_datetime' : tweet_created_at_datetime,\n",
+    "                                    'tweet_user_created_at_datetime' : tweet_user_created_at_datetime\n",
     "                                   })\n",
     "    return twitter_tl_df"
    ]
