Update read_data.R and correct utc offset in timelines data

--- a/ipynb_notebooks/How To Convert Timezone.ipynb
+++ b/ipynb_notebooks/How To Convert Timezone.ipynb
@@ -135,6 +135,100 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def xstr(s):\n",
+    "    if s is None:\n",
+    "        s = 0\n",
+    "    return int(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-28800"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xstr(offset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "tweet_created_at_datetime_offset                = [datetime.datetime.strptime(dtstr,'%a %b %d %H:%M:%S %z %Y') \n",
+    "                                                   + datetime.timedelta(0, xstr(offset))\n",
+    "                                                    for time in dtstr] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2016, 1, 30, 9, 2, 55, tzinfo=datetime.timezone.utc)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdt=datetime.datetime.strptime(dtstr,'%a %b %d %H:%M:%S %z %Y') + datetime.timedelta(0, xstr(offset))\n",
+    "newdt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Sat Jan 30 09:02:55 +0000 2016'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "newdt.strftime('%a %b %d %H:%M:%S %z %Y')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
