heatmap function finalized

--- a/rscripts/STAT222_Golden_Globe_Presentation.Rmd
+++ b/rscripts/STAT222_Golden_Globe_Presentation.Rmd
@@ -40,6 +40,24 @@ head(combined_timelines)
 ```{r,echo=FALSE,message=FALSE}
 source("./JH_function.R")
 combined_timelines=JH_dataframe_addcolumn(combined_timelines)
+agg.heatoc=JH_heatmap_df_generation(
+  combined_timelines[as.logical(1-(combined_timelines$is.female+combined_timelines$is.male)),]
+  )
+agg.heat=JH_heatmap_df_generation(combined_timelines)
+p3=JH_heatmap_plot(agg.heat)
+p4=JH_heatmap_plot(agg.heatoc)
+  grid.arrange(p3 + ggtitle("All Tweets Heatmap"),
+             p4 + ggtitle("Official Accounts Tweets Heatmap"),
+             nrow=2,
+             top = textGrob("Heatmap For Tweet Density",
+             gp = gpar(fontsize=29)) 
+)
+```
+
+## Jianglong Slide 2
+
+```{r,echo=FALSE,message=FALSE}
+
 agg.heatfe=JH_heatmap_df_generation(combined_timelines[combined_timelines$is.female,])
 agg.heatma=JH_heatmap_df_generation(combined_timelines[combined_timelines$is.male,])
 p1=JH_heatmap_plot(agg.heatfe)
@@ -50,18 +68,16 @@ grid.arrange(p1 + ggtitle("Female Tweets Heatmap"),
              top = textGrob("Heatmap For Tweet Density",
              gp = gpar(fontsize=29)) 
 )
-
-
 ```
 
-## Jianglong Slide 2
+## Jianglong Slide 3
 
 ```{r,echo=FALSE,message=FALSE}
 people=JH_tweet_power_df_generation(combined_timelines,nominees_metadata)
 JH_tweet_power_scatter_plot(people)
 ```
 
-## Jianglong Slide 3
+## Jianglong Slide 4
 
 ```{r,echo=FALSE,message=FALSE}
 JH_tweet_power_profile_plot(people)
