--- a/ipynb_notebooks/create_following_data.ipynb
+++ b/ipynb_notebooks/create_following_data.ipynb
@@ -2,33 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: './data/input_data/sentiment_analysis/stopwords.txt'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-2-7ceae05c2f2f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mcreate_timelines_dataset\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcreate_twitter_timeline_DataFrame\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconcatenate_all_twitter_timelines\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m \u001b[0;31m#from time_functions import creutc_offset_convert\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Users/shamindra/LEARNING/STUDY/UC_BERKELEY/STATISTICS/COURSES/MA_PROGRAM/CURRENT_COURSES/SPRING_2016/STAT222/PROJECTS/twitter_project/create_timelines_dataset.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mINPUT_SENTIMENT_DATA_DIR\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\"stopwords.txt\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m     \u001b[0mSTOPWORDS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'\\n'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: './data/input_data/sentiment_analysis/stopwords.txt'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "import sys\n",
     "sys.path.append('../')\n",
-    "sys.path\n",
-    "from create_timelines_dataset import create_twitter_timeline_DataFrame, concatenate_all_twitter_timelines\n",
+    "#from create_timelines_dataset import create_twitter_timeline_DataFrame, concatenate_all_twitter_timelines\n",
     "#from time_functions import creutc_offset_convert"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Load a single user twitter timeline (already downloaded as a json object)\n",
+    "with open(\"../data/output_data/following_metadata/Alancumming.json\", \"r\") as f:\n",
+    "    following = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(following)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(following[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['description',\n",
+       " 'verified',\n",
+       " 'default_profile',\n",
+       " 'status',\n",
+       " 'protected',\n",
+       " 'id_str',\n",
+       " 'location',\n",
+       " 'lang',\n",
+       " 'contributors_enabled',\n",
+       " 'time_zone',\n",
+       " 'profile_sidebar_fill_color',\n",
+       " 'profile_background_tile',\n",
+       " 'follow_request_sent',\n",
+       " 'is_translator',\n",
+       " 'profile_image_url_https',\n",
+       " 'profile_image_url',\n",
+       " 'created_at',\n",
+       " 'profile_background_image_url',\n",
+       " 'id',\n",
+       " 'profile_background_color',\n",
+       " 'profile_link_color',\n",
+       " 'screen_name',\n",
+       " 'profile_background_image_url_https',\n",
+       " 'notifications',\n",
+       " 'default_profile_image',\n",
+       " 'entities',\n",
+       " 'profile_text_color',\n",
+       " 'name',\n",
+       " 'geo_enabled',\n",
+       " 'profile_sidebar_border_color',\n",
+       " 'friends_count',\n",
+       " 'utc_offset',\n",
+       " 'statuses_count',\n",
+       " 'url',\n",
+       " 'favourites_count',\n",
+       " 'profile_use_background_image',\n",
+       " 'has_extended_profile',\n",
+       " 'is_translation_enabled',\n",
+       " 'profile_banner_url',\n",
+       " 'listed_count',\n",
+       " 'following',\n",
+       " 'followers_count']"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[ky for ky in following[0][0].keys()]"
    ]
   },
   {
