--- a/rscripts/STAT222_Golden_Globe_Presentation.Rmd
+++ b/rscripts/STAT222_Golden_Globe_Presentation.Rmd
@@ -98,10 +98,10 @@ knitr::read_chunk("follow_plots.R")
 
 ```
 
-```{r setupSimilarity, echo = FALSE, cache = TRUE}
+```{r setupSimilarity, echo = FALSE, cache = TRUE,warning=FALSE}
 ```
 
-```{r similarityHist, echo = FALSE, cache = TRUE}
+```{r similarityHist, echo = FALSE, cache = TRUE,warning=FALSE}
 ```
 
 ## Peter Slide 2
