--- a/rscripts/STAT222_Golden_Globe_Presentation.Rmd
+++ b/rscripts/STAT222_Golden_Globe_Presentation.Rmd
@@ -132,7 +132,7 @@ mention_plot(ordered_retweet_count, IS_PERSON = TRUE)
 
 ## Boying Slide 3
 
-![My Figure](../plots/domain_plot.png)
+![My Figure](../plots/domain_bar.png)
 
 ```{r,echo=FALSE,message=FALSE, cache = TRUE}
 
@@ -140,8 +140,15 @@ mention_plot(ordered_retweet_count, IS_PERSON = TRUE)
 
 ## Boying Slide 4
 
-```{r,echo=FALSE,message=FALSE, cache = TRUE}
-
+```{r kable,echo=FALSE}
+male <- read.csv("../data/output_data/male.csv")
+female <- read.csv("../data/output_data/female.csv")
+library(knitr)
+dt_gender_domain <- data.frame(Male = male$name[c(2, 4:6, 8:13)], 
+                               PercentageM = male$freq[c(2, 4:6, 8:13)]*100,
+                               Female = female$name[c(2:3, 5:12)], 
+                               PercentageF = female$freq[c(2:3, 5:12)]*100)
+kable(dt_gender_domain, digits=2)
 ```
 
 ## Tomofumi Slide 1
