--- a/rscripts/STAT222_Golden_Globe_Presentation.Rmd
+++ b/rscripts/STAT222_Golden_Globe_Presentation.Rmd
@@ -5,6 +5,17 @@ date: "February 8, 2016"
 output: beamer_presentation
 ---
 
+```{r,echo = FALSE, message = FALSE, cache = TRUE}
+source("./read_data.R")
+```
+
+```{r,echo=FALSE,message=FALSE,cache=FALSE}
+knitr::read_chunk("similarity_plots.R")
+knitr::read_chunk("follow_plots.R")
+knitr::read_chunk("summary_plot.R")
+```
+
+
 ## Data Sources and Limitations
 
 * Metadata - Golden Globe Nominees
@@ -22,6 +33,8 @@ output: beamer_presentation
 
 ## Quick summary of metadata
 
+```{r dataSummaryPlot, echo = FALSE}
+```
 
 ## Key themes of our data exploration 
 
@@ -30,10 +43,9 @@ output: beamer_presentation
 - **Sentiment Analysis** - *Boying*
 - **Twitter Influence and Temporal Patterns** - *Jianglong*
 
-## Jianglong Slide 1
+## When Do They Tweet?
 
 ```{r,echo=FALSE,message=FALSE,cache=TRUE}
-source("./read_data.R")
 source("./JH_function.R")
 combined_timelines=JH_dataframe_addcolumn(combined_timelines)
 agg.heatoc=JH_heatmap_df_generation(
@@ -50,7 +62,7 @@ p4=JH_heatmap_plot(agg.heatoc)
 )
 ```
 
-## Jianglong Slide 2
+## When Do Celebrities Tweet? By Gender
 
 ```{r,echo=FALSE,message=FALSE,cache=TRUE}
 
@@ -67,59 +79,58 @@ grid.arrange(p1 + ggtitle("Female Tweets Heatmap"),
 
 ```
 
-## Jianglong Slide 3
+## Tweet "POWER" VS Twitter "TENURE"
 
 ```{r,echo=FALSE,message=FALSE,cache=TRUE}
 people=JH_tweet_power_df_generation(combined_timelines,nominees_metadata)
 JH_tweet_power_scatter_plot(people)
 ```
 
-## Jianglong Slide 4
+## Profile of "Weak and Old" VS "Young and Powerful"
 
 ```{r,echo=FALSE,message=FALSE,cache=TRUE}
 JH_tweet_power_profile_plot(people)
 ```
 
-## Peter Slide 1
-
-```{r,echo=FALSE,message=FALSE,cache=TRUE}
-knitr::read_chunk("similarity_plots.R")
-knitr::read_chunk("follow_plots.R")
+## User Interactions
+```{r followPlot, echo = FALSE,cache=FALSE}
 ```
 
-```{r setupSimilarity, echo = FALSE, cache = TRUE,warning=FALSE}
+
+## Twitter "Style" Breakdown
+```{r followProfiling, echo = FALSE,cache=FALSE}
 ```
 
-```{r similarityHist, echo = FALSE, cache = TRUE,warning=FALSE}
+## Following Similarity
+
+```{r setupSimilarity, echo = FALSE,warning=FALSE,cache=FALSE}
 ```
 
-## Peter Slide 2
-```{r similarityBar, echo = FALSE, cache = TRUE}
+```{r similarityHist, echo = FALSE,warning=FALSE,cache=FALSE}
 ```
 
-## Peter Slide 3
-```{r followPlot, echo = FALSE, cache = TRUE}
+
+## Most Similar Pairs
+
+```{r similarityBar, echo = FALSE,cache=FALSE}
 ```
 
-## Peter Slide 4
-```{r followProfiling, echo = FALSE, cache = TRUE}
-```
 
-## Boying Slide 1
+## Popularity Among All Users $\neq$ Popularity Among Peers
 
-```{r,echo=FALSE, message=FALSE, cache = TRUE}
+```{r,echo=FALSE, message=FALSE, cache = TRUE,warning=FALSE}
 source("./BG_plotting_functions.R")
 ordered_retweet_count <- mentioned_dataframe(combined_timelines)
 mentioned_retweet(ordered_retweet_count)
 ```
 
-## Boying Slide 2
+## Mention Counts Grouped by Celebrities
 
 ```{r,echo=FALSE,message=FALSE, cache = TRUE,warning=FALSE}
 mention_plot(ordered_retweet_count, IS_PERSON = TRUE)
 ```
 
-## Boying Slide 3
+## Top Domains of External Links
 
 ![My Figure](../plots/domain_bar.png)
 
@@ -127,7 +138,7 @@ mention_plot(ordered_retweet_count, IS_PERSON = TRUE)
 
 ```
 
-## Boying Slide 4
+## Percentage of External Links Used by Gender
 
 ```{r kable,echo=FALSE,cache=TRUE}
 male <- read.csv("../data/output_data/male.csv")
@@ -140,7 +151,7 @@ dt_gender_domain <- data.frame(Male = male$name[c(2, 4:6, 8:13)],
 kable(dt_gender_domain, digits=2)
 ```
 
-## Tomofumi Slide 1
+## Pre and Post analysis for Male
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
 source('./pre_post_analysis.R')
@@ -149,11 +160,20 @@ combined_timelines <- pre_post_modify(combined_timelines)
 pre_post_plot("M", median_flag = FALSE)
 ```
 
-## Tomofumi Slide 2
+## Pre and Post analysis for Female
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
 pre_post_plot("F", median_flag = FALSE)
 ```
+
+## During analysis; right before and after the awards
+
+```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
+source("./during_analysis.R")
+during_plot(FALSE, 24)
+```
+
+
 
 
 ## Conclusion and Next Steps
