--- a/rscripts/STAT222_Golden_Globe_Presentation.Rmd
+++ b/rscripts/STAT222_Golden_Globe_Presentation.Rmd
@@ -27,21 +27,20 @@ knitr::read_chunk("summary_plot.R")
         - Age of Nominee/ Release Date
 
 * Timelines
-    + Based on most recent tweets since Dec 10 2015
     + Typically searched for top 3200 tweets from API
+    + Based on most recent tweets since Dec 10 2015
     + NLP processing performed e.g. removing stopwords etc
 
-## Quick summary of metadata
+## Quick summary of tweet data collected
 
-```{r dataSummaryPlot, echo = FALSE}
-```
+![My Figure3](../plots/data_summary.png)
 
 ## Key themes of our data exploration 
 
-- **Pre-Post-During Golden Globe Analysis** - *Tomo*
+- **Twitter Influence and Temporal Patterns** - *Jianglong*
 - **Social Popularity of Winners and Nominees** - *Peter*
 - **Sentiment Analysis** - *Boying*
-- **Twitter Influence and Temporal Patterns** - *Jianglong*
+- **Pre-Post-During Golden Globe Analysis** - *Tomo*
 
 ## When Do They Tweet?
 
@@ -89,19 +88,22 @@ JH_tweet_power_scatter_plot(people)
 ## Profile of "Weak and Old" VS "Young and Powerful"
 
 ```{r,echo=FALSE,message=FALSE,cache=TRUE}
+library(stringr)
 JH_tweet_power_profile_plot(people)
+
 ```
 
-## User Interactions
+## Follower/Following Behavior Exhibits Distinct Groups
 ```{r followPlot, echo = FALSE,cache=FALSE}
 ```
 
 
-## Twitter "Style" Breakdown
-```{r followProfiling, echo = FALSE,cache=FALSE}
+## Movie/TV Accounts Appear Most Active
+
+```{r followProfiling, echo = FALSE,cache=FALSE, warning=FALSE,message=FALSE}
 ```
 
-## Following Similarity
+## Following Similarity Distribution
 
 ```{r setupSimilarity, echo = FALSE,warning=FALSE,cache=FALSE}
 ```
@@ -110,10 +112,11 @@ JH_tweet_power_profile_plot(people)
 ```
 
 
-## Most Similar Pairs
+## Similarity Measures Match Real-life Connections
 
 ```{r similarityBar, echo = FALSE,cache=FALSE}
 ```
+
 
 
 ## Popularity Among All Users $\neq$ Popularity Among Peers
@@ -151,7 +154,7 @@ dt_gender_domain <- data.frame(Male = male$name[c(2, 4:6, 8:13)],
 kable(dt_gender_domain, digits=2)
 ```
 
-## Pre and Post analysis for Male
+## Males tweeted more Post-Globes than Pre-Globes
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
 source('./pre_post_analysis.R')
@@ -160,25 +163,20 @@ combined_timelines <- pre_post_modify(combined_timelines)
 pre_post_plot("M", median_flag = FALSE)
 ```
 
-## Pre and Post analysis for Female
+## Females winners were less favorited Post-Globes!
 
 ```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
 pre_post_plot("F", median_flag = FALSE)
 ```
 
-## During analysis; right before and after the awards
+## Actors are using Twitter for activism post-Globes!
 
-```{r,echo=FALSE,message=FALSE,warning=FALSE,cache=TRUE}
-source("./during_analysis.R")
-during_plot(FALSE, 24)
-```
-
-
+![My Figure2](../plots/bag_of_words.png)
 
 
 ## Conclusion and Next Steps
 
-* Nominee Analysis shows distinct behaviour patterns
+* Nominee Analysis shows distinct behaviour patterns when summarised by gender, age, temporal components
 * Next Steps:
     + Do the analysis for Golden Globes 2015, 2014, 2013
     + Look at nominee influence via external data e.g. box office
