Attempt at making latex insert cleanly.

--- a/latex/following_similarity.tex
+++ b/latex/following_similarity.tex
@@ -1,9 +1,11 @@
-\documentclass{article}
+\documentclass{slides}
+\usepackage[landscape]{geometry}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{bbm}
 \begin{document}
+	\large
 	\begin{itemize}
 		\item Following vector: $x_i = (0, 1, 1, 0, \ldots, 1)^\top$,
 		where $x_{ik} = \mathbbm{1} \{\text{nominee $i$ follows account $k$}\}$
