Moved conclusion out of latex.

--- a/latex/following_similarity.tex
+++ b/latex/following_similarity.tex
@@ -5,11 +5,11 @@
 \usepackage{amsfonts}
 \usepackage{bbm}
 \begin{document}
-	\large
+	\Large
 	\begin{itemize}
 		\item Following vector: $x_i = (0, 1, 1, 0, \ldots, 1)^\top$,
 		where $x_{ik} = \mathbbm{1} \{\text{nominee $i$ follows account $k$}\}$
 		\item Similarity: $S(i, j) = \dfrac{x_i^\top x_j} {||x_i|| \cdot ||x_j||} = $ cosine of angle between vectors
-		\item Conclusion: co-workers, friends, related accounts tend to have high similarity
+		%\item Conclusion: co-workers, friends, related %accounts tend to have high similarity
 	\end{itemize}
 \end{document}
