Update similarity latex.

--- a/latex/following_similarity.tex
+++ b/latex/following_similarity.tex
@@ -1,11 +1,12 @@
-\documentclass{slides}
-\usepackage[landscape]{geometry}
+\documentclass{article}
+\usepackage{geometry}
+\geometry{paperheight=2.5in, paperwidth=12.5in, margin=0.1in}
 \usepackage{amsmath}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{bbm}
 \begin{document}
-	\Large
+	\Huge
 	\begin{itemize}
 		\item Following vector: $x_i = (0, 1, 1, 0, \ldots, 1)^\top$,
 		where $x_{ik} = \mathbbm{1} \{\text{nominee $i$ follows account $k$}\}$
